[build-system]
requires = ['setuptools>=60.9.3', 'wheel']
build-backend = 'setuptools.build_meta:__legacy__'

[project]
name = "fast-csv-middleware"
version = "0.1.3"
description = "A CSV Middleware for FastAPI"
readme = "README.md"
authors = [{ name = "Mahesh Prajapati", email = "zephyrr2722@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["fastapi", "csv", "middleware"]
dependencies = [
    "fastapi",
]
requires-python = ">=3.8"

[project.urls]
homepage = "https://github.com/mahyess/fastapicsv"
