[metadata]
name = fast-csv-middleware
version = 0.1.0
description = A CSV Middleware for FastAPI
long_description = file: README.rst
url = https://github.com/mahyess/fastapicsv
author = Mahesh Prajapati
author_email = zephyrr2722@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: FastAPI
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    FastAPI >= 0.109.0
